[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/GUI/Theme/Menu.tres" type="Theme" id=1]
[ext_resource path="res://src/Hub/Hub.gd" type="Script" id=2]
[ext_resource path="res://src/Hub/Trophies.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Hub/MissionSelect.tscn" type="PackedScene" id=4]

[node name="Hub" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Options" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -125.0
margin_top = -420.0
margin_right = 125.0
custom_constants/separation = 20

[node name="SelectMission" type="Button" parent="Options"]
margin_right = 250.0
margin_bottom = 50.0
rect_min_size = Vector2( 250, 50 )
text = "Select Mission"

[node name="Loadout" type="Button" parent="Options"]
margin_top = 70.0
margin_right = 250.0
margin_bottom = 120.0
rect_min_size = Vector2( 200, 50 )
disabled = true
text = "Loadout"

[node name="Shop" type="Button" parent="Options"]
margin_top = 140.0
margin_right = 250.0
margin_bottom = 190.0
rect_min_size = Vector2( 200, 50 )
disabled = true
text = "Shop"

[node name="Trophies" type="Button" parent="Options"]
margin_top = 210.0
margin_right = 250.0
margin_bottom = 260.0
rect_min_size = Vector2( 200, 50 )
disabled = true
text = "Trophies"

[node name="Library" type="Button" parent="Options"]
margin_top = 280.0
margin_right = 250.0
margin_bottom = 330.0
rect_min_size = Vector2( 200, 50 )
disabled = true
text = "Library"

[node name="Back" type="Button" parent="Options"]
margin_top = 350.0
margin_right = 250.0
margin_bottom = 400.0
rect_min_size = Vector2( 200, 50 )
text = "Back"

[node name="Control" type="Control" parent="Options"]
margin_top = 420.0
margin_right = 250.0
margin_bottom = 420.0

[node name="Trophies" parent="." instance=ExtResource( 3 )]
visible = false

[node name="MissionSelect" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="pressed" from="Options/SelectMission" to="." method="_on_SelectMission_pressed"]
[connection signal="pressed" from="Options/Trophies" to="." method="_on_Trophies_pressed"]
[connection signal="pressed" from="Options/Back" to="." method="_on_Back_pressed"]
